# support

./: .gitignore  LICENSE.txt  Pipfile  README.md  cancel.rst  conf.py  index.rst  pyproject.toml  return-policy.rst  success.rst
.github/workflows/: azure-static-web-apps-wonderful-island-0d0b4470f.yml
_static/: google_analytics_tracker.js
_templates/: layout.html
contracts/: agreement.rst  index.rst  purchase.rst
services/: azure.rst  consulting.rst  index.rst  onsite.rst  patching.rst  security.rst  training.rst
